fix register box overflow

--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -12,7 +12,7 @@ ul {
 
 .App {
   width: 100%;
-  min-height: 130vh;
+  min-height: 100vh;
   background-color: $color-secondary-dark;
   font-family: "Titillium Web", sans-serif;
 }
