--- a/src/components/auth/auth.scss
+++ b/src/components/auth/auth.scss
@@ -100,4 +100,8 @@
       }
     }
   }
+
+  &-container {
+    min-height: 130vh;
+  }
 }
